# cim-bench

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  run_benchmarks.sh  setup.sh
benchmarks/: benchmark_template.py  cimgraph_realgrid_benchmark.py  cimgraph_svedala_benchmark.py  pypowsybl_realgrid_benchmark.py  pypowsybl_svedala_benchmark.py  rdflib_realgrid_benchmark.py  rdflib_svedala_benchmark.py  test_parser_benchmark.py  test_pypowsybl_benchmark.py  test_triplets_benchmark.py  triplets_realgrid_benchmark.py  triplets_svedala_benchmark.py  veragrid_realgrid_benchmark.py  veragrid_svedala_benchmark.py
parsers/: __init__.py  cimgraph_adapter.py  datasets.py  parser_adapter.py  pypowsybl_adapter.py  pypowsybl_loader.py  rdflib_adapter.py  triplets_adapter.py  triplets_loader.py  veragrid_adapter.py
results/: cimgraph_realgrid_benchmark_report.md  cimgraph_svedala_benchmark_report.md  comparison_summary.md  pypowsybl_realgrid_benchmark_report.md  pypowsybl_realgrid_report.md  pypowsybl_report.md  pypowsybl_svedala_benchmark_report.md  pypowsybl_svedala_report.md  rdflib_realgrid_benchmark_report.md  rdflib_svedala_benchmark_report.md  triplets_realgrid_benchmark_report.md  triplets_realgrid_report.md  triplets_report.md  triplets_svedala_benchmark_report.md  triplets_svedala_report.md  veragrid_realgrid_benchmark_report.md  veragrid_svedala_benchmark_report.md
tools/: generate_comparison.py  generate_graphs.py  generate_report.py
tools/pypowsybl/: README.md
tools/triplets/: README.md
