[project]
name = "cim-bench"
version = "0.1.0"
description = "Performance benchmarking suite for CIM parsers and serializers"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "triplets>=0.0.17",
    "pypowsybl>=1.0.0",
    "psutil>=5.9.0",
    "VeraGrid>=5.6.0",
    "cim-graph>=0.4.3a10",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.8.0",
]
